--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,27 +1,37 @@
-<%= form_for(project) do |f| %>
-  <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+<div class = "container" >
+  <div class = "row">
+    <div class = "col-md-6 col-md-offset-3">
+      <div class = "well">
+        <%= form_for(project) do |f| %>
+          <% if project.errors.any? %>
+            <div id="error_explanation">
+              <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
-      <ul>
-      <% project.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+              <ul>
+              <% project.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
+          <% end %>
+
+          <div calss = "form-group">
+            <div class="field form-field">
+              <%= f.label :name %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
+
+            <div class="field form-field">
+              <%= f.label :description %>
+              <%= f.text_area :description, class: 'form-control'%>
+            </div>
+
+            <div class="actions">
+              <%= f.submit class: 'btn btn-primary' %>
+            </div>
+          </div> 
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+     </div> 
+   </div> 
+ </div> 
