--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,14 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
-
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<div class="container">
+	<div class="well">
+		<div class = "row">
+			<div class="col-md-4">			
+				<p>
+				  <strong>Name:</strong>
+				  <%= @project.name %>
+				</p>
+			</div>
+			<div class="col-md-4">
+				<p>
+				  <strong>Description:</strong>
+				  <%= @project.description %>
+				</p>
+			</div>
+			<div class="col-md-4">	
+				<%= link_to 'Edit', edit_project_path(@project) %> |
+				<%= link_to 'Back', projects_path %>
+			</div>
+		</div>
+	</div>
+</div>
