--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,11 @@
 <div class= "container">
+  <%= form_tag projects_path, method: 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", name: nil %>
+  </p>
+  <% end %>
+
   <div class = "row">
     <h1 class= "text-center">Projects</h1>
     <div class = "col-md-6">
